[package]
name = "sickle_ui"
version = "0.2.1"
edition = "2021"
categories = ["gui"]
description = "A widget library built for Bevy, in Bevy."
exclude = ["assets/", "crates/", ".github/"]
keywords = ["bevy", "gui", "sickle", "sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UmbraLuminosa/sickle_ui"

[workspace]
members = ["crates/*"]

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { path = "crates/sickle_math", version = "0.2.1" }
sickle_macros = { path = "crates/sickle_macros", version = "0.2.1" }
sickle_ui_scaffold = { path = "crates/sickle_ui_scaffold", version = "0.2.1" }

bevy = { version = "0.14" }
bevy_reflect = { version = "0.14" }
bevy_ecs_macros = { version = "0.14" }

serde = { version = "1.0", features = ["derive"] }
