[package]
name = "sickle_ui"
version = "0.2.1"
edition = "2021"
categories = ["gui"]
description = "A widget library built for Bevy, in Bevy."
exclude = ["assets/", "crates/", ".github/"]
keywords = ["bevy", "gui", "sickle", "sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UmbraLuminosa/sickle_ui"

[workspace]
members = ["crates/*"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { path = "crates/sickle_math", version = "0.2.1" }
sickle_macros = { path = "crates/sickle_macros", version = "0.2.1" }
sickle_ui_scaffold = { path = "crates/sickle_ui_scaffold", version = "0.2.1" }

bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
] }

serde = { version = "1.0", features = ["derive"] }
