[package]
name = "sickle_ui"
version = "0.2.3"
edition = "2021"
categories = ["gui"]
description = "A widget library built for Bevy, in Bevy."
exclude = ["/assets/", "/crates/", "/.github/"]
keywords = ["bevy", "gui", "sickle", "sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UmbraLuminosa/sickle_ui"

[workspace]
members = ["crates/*"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy_default_font", "observable"]
dev = ["bevy/dynamic_linking"]
disable-ui-context-placeholder-warn = [
    "sickle_ui_scaffold/disable-ui-context-placeholder-warn",
]
bevy_default_font = ["bevy/default_font"]
observable = []

[dependencies]
sickle_math = { path = "crates/sickle_math", version = "0.2.3" }
sickle_macros = { path = "crates/sickle_macros", version = "0.2.3" }
sickle_ui_scaffold = { path = "crates/sickle_ui_scaffold", version = "0.2.3" }

bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_scene",
    "png",
    "tonemapping_luts",
    "x11",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
