[package]
name = "sickle_math"
version = "0.2.1"
edition = "2021"
description = "Math dependencies for sickle_ui"
keywords = ["sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UmbraLuminosa/sickle_ui"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
