[package]
name = "sickle_math"
version = "0.2.2"
edition = "2021"
description = "Math dependencies for sickle_ui"
keywords = ["sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UmbraLuminosa/sickle_ui"

[dependencies]
bevy_color = "0.14.0"
bevy_reflect = "0.14.0"
bevy_ui = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
