[package]
name = "sickle_ui_scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { path = "../sickle_math" }
sickle_macros = { path = "../sickle_macros" }

bevy = { path = "../../../../bevy" }
bevy_reflect = { path = "../../../../bevy/crates/bevy_reflect" }
serde = { version = "1.0", features = ["derive"] }
