[package]
name = "sickle_ui_scaffold"
version = "0.2.1"
edition = "2021"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { path = "../sickle_math" }
sickle_macros = { path = "../sickle_macros" }

bevy = { version = "0.14" }
bevy_reflect = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
