[package]
name = "sickle_ui_scaffold"
version = "0.2.1"
edition = "2021"
description = "Scaffolding framework for sickle_ui"
keywords = ["sickle_ui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/UmbraLuminosa/sickle_ui"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sickle_math = { path = "../sickle_math", version = "0.2.1" }
sickle_macros = { path = "../sickle_macros", version = "0.2.1" }

bevy = { version = "0.14", default-features = true, features = [
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
] }
serde = { version = "1.0", features = ["derive"] }
